# diesel_musl_testcase

./: .dockerignore  Cargo.toml  Dockerfile  build.sh  build_musl_breaks.sh  build_musl_nightly.sh  build_musl_stable.sh  build_musl_works.sh
migrations/20170710093139_init/: up.sql
src/: main.rs  models.rs  schema.rs
